plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '1.9.0'

description = 'OpenCADC core utility library'
def git_url = 'https://github.com/opencadc/core'

dependencies {
    //compile 'org.apache.logging.log4j:log4j-1.2-api:[2.17.2,3.0)'
    //compile 'org.apache.logging.log4j:log4j-api:[2.17.2,3.0)'
    //compile 'org.apache.logging.log4j:log4j-core:[2.17.2,3.0)'
    //compile 'org.apache.logging.log4j:log4j:[2.17.2,3.0)'

    // log4j 2.18+ suffers from a class loading issue: technical debt
    compile 'org.apache.logging.log4j:log4j-1.2-api:2.17.2'
    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
    compile 'org.apache.logging.log4j:log4j:2.17.2'
    
    compile 'javax.servlet:javax.servlet-api:3.1.0'
    compile 'org.json:json:20220924'
    compile 'xerces:xercesImpl:[2.12.2,)'
    compile 'org.jdom:jdom2:2.0.6.1'
    compile 'org.springframework:spring-jdbc:5.2.22.RELEASE'
    compile 'org.apache.commons:commons-dbcp2:[2.8.0,2.9.0)'

    testCompile 'junit:junit:4.13'
    testCompile 'org.easymock:easymock:3.6'
    testCompile 'org.skyscreamer:jsonassert:1.5.0'

    intTestRuntime 'org.postgresql:postgresql:[42.2.8,)'
}

configurations {
  //compile.exclude group: 'org.springframework', module:'spring-beans'
}

